--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,1 +1,17 @@
 Login
+
+<form method="post" action="/login">
+<div id="loginbox" class="small-box">
+	<h2>Log in</h2>
+		<div class="form-text">
+			<input type="email" name="username"
+				placeholder="E-mail" />
+		</div>
+		<div class="form-text">
+			<input type="password" name="password"
+				placeholder="Password" />
+		</div>
+		<input type="submit" value="Login" />
+	<!-- <span class="beta"></span> -->
+</div>
+</form>
