index.html html5 doctype and basic metas node modules

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,12 +1,39 @@
-<html>
-	<head>
-		<title>Yo</title>
-	</head>
-	<body>
-		<a href="/login">Login</a>
-		<a href="/register">Register</a>
-		<!--<a href="/forgot-password">Forgot password</a>-->
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=9" />
+<meta charset="UTF-8" />
+<meta name="imagetoolbar" content="no" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="MobileOptimized" content="320"/>
+<meta name="HandheldFriendly" content="true"/>
+<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"/>
+<meta name="format-detection" content="telephone=no"/>
+<meta property="og:image" content="FBSHREURL"/>
+<meta name="dc.title" lang="en" content="" />
+<meta name="dc.description" lang="hu" content="" />
+<meta name="dclanguage" content="en" />
+<meta name="dc.publisher" content="" />
+<meta name="dc.coverage" content="World" />
+<meta name="dc.type" content="Text" />
+<meta name="dc.format" content="text/html" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+<meta name="language" content="English">
+<title>PhoDo | The Moleskine app for Visual Thinkers</title>
+<!--[if lt IE 9]>
+<script src="http://edmdesigner.com/wp-content/themes/edm-blog-v2/js/html5shiv.js" type="text/javascript"></script>
+<![endif]-->
+<!--
+<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Merriweather+Sans:400,700' rel='stylesheet' type='text/css'>
+-->
+<link rel="stylesheet" type="text/css" media="screen" href="/style.css" />
+<body>
+	<a href="/login">Login</a>
+	<a href="/register">Register</a>
+	<!--<a href="/forgot-password">Forgot password</a>-->
 
-		<%- include paypalButton.html %>
-	</body>
+	<%- include paypalButton.html %>
+</body>
 </html>
