--- a/src/views/index.html
+++ b/src/views/index.html
@@ -26,11 +26,54 @@
 <![endif]-->
 <link rel="stylesheet" type="text/css" media="screen" href="/fonts/fonts.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="/style.css" />
-<body>
-	<a href="/login">Login</a>
-	<a href="/register">Register</a>
-	<!--<a href="/forgot-password">Forgot password</a>-->
+<body id="landing">
+<%- include _headNav.html %>
+<div id="head">
+	<div class="site">
+		<a id="logo" href="/">PhoDo<span class="fir"></span></a>
+		<h1>The Coolest Photo based ToDo app <span>for <b>Visual Thinkers</b></span></h1>
+	</div>
+</div>
 
-	<%- include paypalButton.html %>
+<div id="hull">
+	<div class="site">
+
+		<div class="topic toleft">
+			<img src="" alt="" width="280" height="280" />
+
+			<p>Lorem ipsum dolor sit amet consectetuer Nam consequat nibh orci Nam. Convallis velit id ut Aenean est senectus consequat arcu pulvinar pede. Neque Nulla libero eget Vivamus vitae nec id ac ante Phasellus. Purus tellus tristique Vivamus risus eu urna et semper consequat turpis. Ligula condimentum est Aenean mollis Integer adipiscing tellus ipsum lacus dolor. Orci quis lacinia a convallis et.</p>
+			<p>Aliquam Quisque pretium ut a ut ullamcorper ut Integer nibh convallis. Odio lobortis eu consequat tincidunt mollis wisi Quisque consectetuer Quisque tincidunt. Metus aliquam massa sagittis tristique interdum molestie et sapien enim id. Lacus sodales nonummy ligula tortor pretium Cras dis id vel tincidunt. Lorem laoreet condimentum lacinia tellus lacus amet pellentesque sit.</p>
+			<p>Nec sit et netus in porta Vestibulum Nam nunc sodales elit. Dictumst sed adipiscing sagittis pellentesque vitae a Morbi orci semper eu. Nulla sed Sed Maecenas Mauris tincidunt metus orci malesuada malesuada Fusce. Leo eu commodo nec ac odio ligula lorem risus auctor ac. Et magna urna augue penatibus Suspendisse id Vivamus convallis.</p>
+		</div>
+
+
+		<div class="topic toright">
+			<img src="" alt="" width="280" height="280" />
+
+			<p>Lorem ipsum dolor sit amet consectetuer Nam consequat nibh orci Nam. Convallis velit id ut Aenean est senectus consequat arcu pulvinar pede. Neque Nulla libero eget Vivamus vitae nec id ac ante Phasellus. Purus tellus tristique Vivamus risus eu urna et semper consequat turpis. Ligula condimentum est Aenean mollis Integer adipiscing tellus ipsum lacus dolor. Orci quis lacinia a convallis et.</p>
+			<p>Aliquam Quisque pretium ut a ut ullamcorper ut Integer nibh convallis. Odio lobortis eu consequat tincidunt mollis wisi Quisque consectetuer Quisque tincidunt. Metus aliquam massa sagittis tristique interdum molestie et sapien enim id. Lacus sodales nonummy ligula tortor pretium Cras dis id vel tincidunt. Lorem laoreet condimentum lacinia tellus lacus amet pellentesque sit.</p>
+			<p>Cursus sem tortor est nascetur tincidunt Mauris convallis vel justo et. Pellentesque netus Vestibulum Nunc eros ultrices parturient in volutpat dapibus Vivamus. Dictumst nulla porttitor malesuada convallis sagittis nibh et turpis gravida porttitor. Aliquet Vestibulum pretium faucibus amet feugiat non libero ante laoreet cursus. Et ut vestibulum quis aliquam Sed ut.</p>
+
+		</div>
+
+		<div class="topic tocenter">
+			<img src="" alt="" width="280" height="280" />
+
+			<p>Aliquam Quisque pretium ut a ut ullamcorper ut Integer nibh convallis. Odio lobortis eu consequat tincidunt mollis wisi Quisque consectetuer Quisque tincidunt. Metus aliquam massa sagittis tristique interdum molestie et sapien enim id. Lacus sodales nonummy ligula tortor pretium Cras dis id vel tincidunt. Lorem laoreet condimentum lacinia tellus lacus amet pellentesque sit.</p>
+			<p>Nec sit et netus in porta Vestibulum Nam nunc sodales elit. Dictumst sed adipiscing sagittis pellentesque vitae a Morbi orci semper eu. Nulla sed Sed Maecenas Mauris tincidunt metus orci malesuada malesuada Fusce. Leo eu commodo nec ac odio ligula lorem risus auctor ac. Et magna urna augue penatibus Suspendisse id Vivamus convallis.</p>
+			<p>Cursus sem tortor est nascetur tincidunt Mauris convallis vel justo et. Pellentesque netus Vestibulum Nunc eros ultrices parturient in volutpat dapibus Vivamus. Dictumst nulla porttitor malesuada convallis sagittis nibh et turpis gravida porttitor. Aliquet Vestibulum pretium faucibus amet feugiat non libero ante laoreet cursus. Et ut vestibulum quis aliquam Sed ut.</p>
+
+		</div>
+
+		<a href="" class="button">Register</a>
+	</div>
+</div>
+
+<div id="foot">
+	<div class="site">
+	<%- include _paypalButton.html %>	
+	</div>
+</div>
+
 </body>
 </html>
