--- a/src/views/invite.html
+++ b/src/views/invite.html
@@ -2,7 +2,7 @@
 	<%= data.link %>
 </div>
 <div id="fb-share">
-	<a target="_blank" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=<%= data.link %>&amp;p[images][0]=http://phodo.co/logo.png&amp;p[title]=Phodo, the visual to-do list&amp;p[summary]=Phodo allows you to create visual to-do lists, using photos you take, or photos sourced from the cloud."><img src="http://mindofatul.files.wordpress.com/2013/02/995501-facebook-share.gif"></a>
+	<a target="_blank" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=<%= data.link %>&amp;p[images][0]=http://phodo.co/img/logo.png&amp;p[title]=Phodo%2C%20the%20visual%20to-do%20list&amp;p[summary]=Phodo%20allows%20you%20to%20create%20visual%20to-do%20lists%2C%20using%20photos%20you%20take%2C%20or%20photos%20sourced%20from%20the%20cloud."><img src="http://mindofatul.files.wordpress.com/2013/02/995501-facebook-share.gif"></a>
 </div>
 <div id="tweet">
 </div>
