--- a/src/views/invite.html
+++ b/src/views/invite.html
@@ -3,6 +3,7 @@
 <div id="email">
 	<div>Your invitation link:</div>
 	<%= data.link %>
+	<%= data.message %>
 	<form method="post" action="invite">
 		<input type="email" name="email" />
 		<input type="submit" value="Invite" />
