--- a/src/views/index.html
+++ b/src/views/index.html
@@ -20,7 +20,7 @@
 <meta name="dc.format" content="text/html" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 <meta name="language" content="English">
-<title>PhoDo | The Moleskine app for Visual Thinkers</title>
+<title>PhoDo | The Coolest Photo based ToDo app for Visual Thinkers</title>
 <!--[if lt IE 9]>
 <script src="http://edmdesigner.com/wp-content/themes/edm-blog-v2/js/html5shiv.js" type="text/javascript"></script>
 <![endif]-->
