form css, login, reg pages, fragments

--- a/src/views/_headNav.html
+++ b/src/views/_headNav.html
@@ -6,6 +6,9 @@
 			<a href="/login" class="button">Login</a>
 			<a href="/register" class="button">Register</a>			
 		<!--<a href="/forgot-password" class="button">Forgot password</a>-->
+
+			<a href="/invite" class="button">Invite</a>
+			<a href="/logout" class="button">Logout</a>
 		</div>
 	</div>
 </div>
