--- a/src/views/index.html
+++ b/src/views/index.html
@@ -64,11 +64,10 @@
 			<p>Cursus sem tortor est nascetur tincidunt Mauris convallis vel justo et. Pellentesque netus Vestibulum Nunc eros ultrices parturient in volutpat dapibus Vivamus. Dictumst nulla porttitor malesuada convallis sagittis nibh et turpis gravida porttitor. Aliquet Vestibulum pretium faucibus amet feugiat non libero ante laoreet cursus. Et ut vestibulum quis aliquam Sed ut.</p>
 
 		</div>
-
 		<a href="" class="button">Register</a>
 	</div>
 </div>
-
+<div class="clr"></div>
 <div id="foot">
 	<div class="site">
 	<%- include _paypalButton.html %>	
