--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,5 +1,6 @@
 html, body { padding:0; margin:0; font-size:14px; font-family: Arial, sans-serif;}
 div, p, ul, li { padding:0; margin:0; }
+.clr {height:0px;overflow:hidden; clear:both;}
 
 html { background:#ffffff; color:#000000;}
 body {
@@ -57,6 +58,21 @@ img {
 	background: url(img/phodo_logo_web.png) 0 0 no-repeat;
 }
 
+.button {
+	padding: 8px 24px;
+	background:#ffffff;
+	color:#7eb82b;
+	border: 2px solid #7eb82b;
+	text-decoration: none;
+	margin-left: 20px;
+	font-weight:bold;
+}
+.button:hover {
+	color:#ffffff;
+	background: #7eb82b;
+
+}
+
 #nav {
 	height: 100px;
 	background: #ffffff;
@@ -100,15 +116,19 @@ img {
 	height:100%;
 	left:0;
 	top:0;
-	background: url(img/phodo_logo_web_60.png) 0 0 no-repeat;
+	background: url(img/phodo6080.png) 0 0 no-repeat;
 }
 
 #landing #logo-small { display:none; }
 
-
 #head {
 	background: url(img/bg1.jpg) center top no-repeat;
 	padding: 80px 0 210px;
+}
+
+#subhead h1 {
+	color:#000000;
+	padding: 50px 0px;
 }
 
 .topic { padding: 70px 0px; }
@@ -123,6 +143,58 @@ img {
 .tocenter p { text-align: center;}
 .tocenter img { margin:21px auto 30px;}
 
-@media only screen and (max-width: 980px) and (min-width: 190px) {
-	html {background: #ffffff;}
+#foot .site {
+	padding-top:40px;
+	padding-bottom:40px;
+}
+
+.form-text {
+	padding: 10px 0px;
+	max-width: 300px;
+	width: 100%;
+	border: 2px solid #eeeeee;
+
+	margin: 0 auto 20px;
+}
+.form-text input {
+	width: 90%;
+	padding: 5px 5%;
+	font-size: 16px;
+	font-family: 'Open Sans', Arial, sans-serif;
+	color:#959595;
+
+	background: transparent !important;
+	border: 0px none !important;
+	outline: 0px none !important;
+}
+
+form button {
+	padding: 10px 0px;
+	max-width: 300px;
+	width: 100%;	
+
+	font-family: 'Open Sans', Arial, sans-serif;
+	font-size: 16px;
+	font-weight:bold;
+	text-transform:uppercase;
+	color:#ffffff;
+
+	background: #7eb82b !important;
+	border: 0px none !important;
+	outline: 0px none !important;
+}
+
+
+@media only screen and (max-width: 980px) and (min-width: 500px) {
+	.site {
+		width: 90%;
+	}
+}
+@media only screen and (max-width: 499px) and (min-width: 190px) {
+	.site {
+		width: 90%;
+	}
+	#nav #actions { float: none; text-align: center; }
+	.topic img { margin:0 auto 30px !important; float:none !important; clear:both;}
+	.topic p { text-align:center; }
 }
