--- a/src/views/login.html
+++ b/src/views/login.html
@@ -1,17 +1,56 @@
-Login
-
-<form method="post" action="/login">
-<div id="loginbox" class="small-box">
-	<h2>Log in</h2>
-		<div class="form-text">
-			<input type="email" name="username"
-				placeholder="E-mail" />
-		</div>
-		<div class="form-text">
-			<input type="password" name="password"
-				placeholder="Password" />
-		</div>
-		<input type="submit" value="Login" />
-	<!-- <span class="beta"></span> -->
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+<meta http-equiv="X-UA-Compatible" content="IE=9" />
+<meta charset="UTF-8" />
+<meta name="imagetoolbar" content="no" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="MobileOptimized" content="320"/>
+<meta name="HandheldFriendly" content="true"/>
+<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE"/>
+<meta name="format-detection" content="telephone=no"/>
+<meta property="og:image" content="FBSHREURL"/>
+<meta name="dc.title" lang="en" content="" />
+<meta name="dc.description" lang="hu" content="" />
+<meta name="dclanguage" content="en" />
+<meta name="dc.publisher" content="" />
+<meta name="dc.coverage" content="World" />
+<meta name="dc.type" content="Text" />
+<meta name="dc.format" content="text/html" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+<meta name="language" content="English">
+<title>PhoDo | Login</title>
+<link rel="stylesheet" type="text/css" media="screen" href="/fonts/fonts.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="/style.css" />
+<body id="login">
+<%- include _headNav.html %>
+<div id="subhead">
+	<div class="site">
+		<h1>Login</h1>
+	</div>
 </div>
-</form>
+
+<div id="hull">
+	<div class="site">
+
+		<form method="post" action="/login">
+			<div id="loginbox" class="small-box">
+				<div class="form-text">
+					<input type="email" name="username"
+						placeholder="E-mail" />
+				</div>
+				<div class="form-text">
+					<input type="password" name="password"
+						placeholder="Password" />
+				</div>
+				<button type="submit">Login</button>
+
+			</div>
+		</form>
+
+	</div>
+</div>
+
+</body>
+</html>
