--- a/src/public/style.css
+++ b/src/public/style.css
@@ -15,8 +15,8 @@ body {
 h1 {
 	font-family: 'Open Sans', Arial, sans-serif;
 	color:#ffffff;
-	font-size: 34px;
-	line-height: 55px;
+	font-size: 50px;
+	line-height: 75px;
 	font-weight: bold;
 	text-align:center;
 }
@@ -123,7 +123,7 @@ img {
 
 #head {
 	background: url(img/bg1.jpg) center top no-repeat;
-	padding: 80px 0 210px;
+	padding: 130px 0 170px;
 }
 
 #subhead h1 {
@@ -182,6 +182,7 @@ form button {
 	background: #7eb82b !important;
 	border: 0px none !important;
 	outline: 0px none !important;
+	cursor:pointer;
 }
 
 
@@ -194,7 +195,17 @@ form button {
 	.site {
 		width: 90%;
 	}
-	#nav #actions { float: none; text-align: center; }
+
+	#nav #actions { float: none; text-align: right; }	
+	#landing #nav #actions { float: none; text-align: center; }
+
+	#nav #actions .button {margin-left: 10px;}
 	.topic img { margin:0 auto 30px !important; float:none !important; clear:both;}
 	.topic p { text-align:center; }
+
+	.form-text,
+	form button {
+		max-width: 100%;	
+	}
+
 }
