--- a/src/views/_headNav.html
+++ b/src/views/_headNav.html
@@ -3,12 +3,14 @@
 		<a id="logo-small" href="/">PhoDo<span class="fir"></span></a>
 
 		<div id="actions" class="">
-			<a href="/login" class="button">Login</a>
-			<a href="/register" class="button">Register</a>			
-		<!--<a href="/forgot-password" class="button">Forgot password</a>-->
-
-			<a href="/invite" class="button">Invite</a>
-			<a href="/logout" class="button">Logout</a>
+			<% if(loggedIn){ %>
+				<a href="/invite" class="button">Invite</a>
+				<a href="/logout" class="button">Logout</a>
+			<% } else { %>
+				<a href="/login" class="button">Login</a>
+				<a href="/register" class="button">Register</a>			
+			<!--<a href="/forgot-password" class="button">Forgot password</a>-->
+			<% } %>
 		</div>
 	</div>
 </div>
