confirm status pages

--- a/src/views/confirmRegistrationEmailSent.html
+++ b/src/views/confirmRegistrationEmailSent.html
@@ -27,13 +27,13 @@
 <%- include _headNav.html %>
 <div id="subhead">
 	<div class="site">
-		<h1>Confirmed registration</h1>
+		<h1>Confirm your registration</h1>
 	</div>
 </div>
 
 <div id="hull">
 	<div class="site">
-		<p>Email sent. Check it, yo!</p>
+		<p>Please check your email, and confirm your registration.</p>
 
 	</div>
 </div>
