--- a/src/views/index.html
+++ b/src/views/index.html
@@ -41,6 +41,8 @@
 		<div class="topic toleft">
 			<img src="/asset/asset1.jpg" alt="" width="280" height="280" />
 
+			<h2>People usually forget about things.</h2>
+
 			<p>Lorem ipsum dolor sit amet consectetuer Nam consequat nibh orci Nam. Convallis velit id ut Aenean est senectus consequat arcu pulvinar pede. Neque Nulla libero eget Vivamus vitae nec id ac ante Phasellus. Purus tellus tristique Vivamus risus eu urna et semper consequat turpis. Ligula condimentum est Aenean mollis Integer adipiscing tellus ipsum lacus dolor. Orci quis lacinia a convallis et.</p>
 			<p>Aliquam Quisque pretium ut a ut ullamcorper ut Integer nibh convallis. Odio lobortis eu consequat tincidunt mollis wisi Quisque consectetuer Quisque tincidunt. Metus aliquam massa sagittis tristique interdum molestie et sapien enim id. Lacus sodales nonummy ligula tortor pretium Cras dis id vel tincidunt. Lorem laoreet condimentum lacinia tellus lacus amet pellentesque sit.</p>
 			<p>Nec sit et netus in porta Vestibulum Nam nunc sodales elit. Dictumst sed adipiscing sagittis pellentesque vitae a Morbi orci semper eu. Nulla sed Sed Maecenas Mauris tincidunt metus orci malesuada malesuada Fusce. Leo eu commodo nec ac odio ligula lorem risus auctor ac. Et magna urna augue penatibus Suspendisse id Vivamus convallis.</p>
