--- a/src/views/index.html
+++ b/src/views/index.html
@@ -42,28 +42,42 @@
 			<img src="/asset/asset1.jpg" alt="" width="280" height="280" />
 
 			<h2>People usually forget about things.</h2>
-
-			<p>Lorem ipsum dolor sit amet consectetuer Nam consequat nibh orci Nam. Convallis velit id ut Aenean est senectus consequat arcu pulvinar pede. Neque Nulla libero eget Vivamus vitae nec id ac ante Phasellus. Purus tellus tristique Vivamus risus eu urna et semper consequat turpis. Ligula condimentum est Aenean mollis Integer adipiscing tellus ipsum lacus dolor. Orci quis lacinia a convallis et.</p>
-			<p>Aliquam Quisque pretium ut a ut ullamcorper ut Integer nibh convallis. Odio lobortis eu consequat tincidunt mollis wisi Quisque consectetuer Quisque tincidunt. Metus aliquam massa sagittis tristique interdum molestie et sapien enim id. Lacus sodales nonummy ligula tortor pretium Cras dis id vel tincidunt. Lorem laoreet condimentum lacinia tellus lacus amet pellentesque sit.</p>
-			<p>Nec sit et netus in porta Vestibulum Nam nunc sodales elit. Dictumst sed adipiscing sagittis pellentesque vitae a Morbi orci semper eu. Nulla sed Sed Maecenas Mauris tincidunt metus orci malesuada malesuada Fusce. Leo eu commodo nec ac odio ligula lorem risus auctor ac. Et magna urna augue penatibus Suspendisse id Vivamus convallis.</p>
+			<p>That is the reason why we usually write <i>to-do lists</i>. Our brains just don't work like computers, we need reminders to accomplish everything we want.</p>
+			<p>Imagine the situation that you know that you should call your mother, since it has been a long-long time since you haven't spoken. I don't know about you, but I feel very, very devastated when I forget to call her.</p>
 		</div>
 
 
 		<div class="topic toright">
 			<img src="/asset/asset2.jpg" alt="" width="280" height="280" />
 
-			<p>Lorem ipsum dolor sit amet consectetuer Nam consequat nibh orci Nam. Convallis velit id ut Aenean est senectus consequat arcu pulvinar pede. Neque Nulla libero eget Vivamus vitae nec id ac ante Phasellus. Purus tellus tristique Vivamus risus eu urna et semper consequat turpis. Ligula condimentum est Aenean mollis Integer adipiscing tellus ipsum lacus dolor. Orci quis lacinia a convallis et.</p>
-			<p>Aliquam Quisque pretium ut a ut ullamcorper ut Integer nibh convallis. Odio lobortis eu consequat tincidunt mollis wisi Quisque consectetuer Quisque tincidunt. Metus aliquam massa sagittis tristique interdum molestie et sapien enim id. Lacus sodales nonummy ligula tortor pretium Cras dis id vel tincidunt. Lorem laoreet condimentum lacinia tellus lacus amet pellentesque sit.</p>
-			<p>Cursus sem tortor est nascetur tincidunt Mauris convallis vel justo et. Pellentesque netus Vestibulum Nunc eros ultrices parturient in volutpat dapibus Vivamus. Dictumst nulla porttitor malesuada convallis sagittis nibh et turpis gravida porttitor. Aliquet Vestibulum pretium faucibus amet feugiat non libero ante laoreet cursus. Et ut vestibulum quis aliquam Sed ut.</p>
+			<h2>Our world is in hurry</h2>
+
+			<p>Most of the people don't really have time. The lack of time makes you to forget about things even more. The ridiculious situation is that sometimes people don't even have time to make to-do lists.</p>
+			<p>Creating a picture is usually more than enough. Pictures can remind you things which are very hard to express verbally.</p>
+
+			<p>Not long ago it happened to me that I had to run somewhere and in a hurry I just took a photo of my mother's picture to remind myself to call her.</p>
 
 		</div>
 
 		<div class="topic tocenter">
 			<img src="/asset/asset3.jpg" alt="" width="280" height="280" />
 
-			<p>Aliquam Quisque pretium ut a ut ullamcorper ut Integer nibh convallis. Odio lobortis eu consequat tincidunt mollis wisi Quisque consectetuer Quisque tincidunt. Metus aliquam massa sagittis tristique interdum molestie et sapien enim id. Lacus sodales nonummy ligula tortor pretium Cras dis id vel tincidunt. Lorem laoreet condimentum lacinia tellus lacus amet pellentesque sit.</p>
-			<p>Nec sit et netus in porta Vestibulum Nam nunc sodales elit. Dictumst sed adipiscing sagittis pellentesque vitae a Morbi orci semper eu. Nulla sed Sed Maecenas Mauris tincidunt metus orci malesuada malesuada Fusce. Leo eu commodo nec ac odio ligula lorem risus auctor ac. Et magna urna augue penatibus Suspendisse id Vivamus convallis.</p>
-			<p>Cursus sem tortor est nascetur tincidunt Mauris convallis vel justo et. Pellentesque netus Vestibulum Nunc eros ultrices parturient in volutpat dapibus Vivamus. Dictumst nulla porttitor malesuada convallis sagittis nibh et turpis gravida porttitor. Aliquet Vestibulum pretium faucibus amet feugiat non libero ante laoreet cursus. Et ut vestibulum quis aliquam Sed ut.</p>
+			<h2>A picture is worth 1000 words</h2>
+
+			<p>Phodo allows you to create visual to-do lists, using photos you take, or photos sourced from the cloud.</p>
+
+			<p>Visual reminders provide better mental association than text-based to-do lists. Studies suggest that our brains can recognize an image in as little as <a href="http://www.dailymail.co.uk/sciencetech/article-2542583/Scientists-record-fastest-time-human-image-takes-just-13-milliseconds.html">13 milliseconds</a>. Compare that with the time it takes to read text-based items on a list, and there's no question which is more efficient.
+			</p>
+
+			<h2>That's why we build PhoDo</h2>
+
+			<p>Once Phodo launches, you can have your own visual to-do lists for just €29 per year. If you sign up now, you get a full year for FREE!</p>
+
+			<p>Share on Facebook, so your friends can also get Phodo for free for the first year.</p>
+
+			<p>If you donate €15, you will get Phodo free for life!</p>
+
+			<p>By using PhoDo, you will never forget to call your mom again. That is the most important thing, isn't it?</p>
 
 		</div>
 		<a href="/register" class="button">Register</a>
