--- a/src/views/loggedIn.html
+++ b/src/views/loggedIn.html
@@ -34,7 +34,11 @@
 <div id="hull">
 	<div class="site">
 		<p>Logged in!!!</p>
+		<p>Once Phodo launches, you can have your own visual to-do lists for just €29 per year. If you sign up now, you get a full year for FREE!</p>
 
+		<p>Share on Facebook, so your friends can also get Phodo for free for the first year.</p>
+
+		<p>If you donate €15, you will get Phodo free for life!</p>
 	</div>
 </div>
 
