landing page text changes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -42,8 +42,8 @@
 			<img src="/asset/asset1.jpg" alt="" width="280" height="280" />
 
 			<h2>People usually forget about things.</h2>
-			<p>That is the reason why we usually write <i>to-do lists</i>. Our brains just don't work like computers, we need reminders to accomplish everything we want.</p>
-			<p>Imagine the situation that you know that you should call your mother, since it has been a long-long time since you haven't spoken. I don't know about you, but I feel very, very devastated when I forget to call her.</p>
+			<p>That is the reason why we usually write <i>to-do lists</i>. Our brains just don't work like computers. We need reminders to accomplish everything we want.</p>
+			<p>Imagine a situation when you know you should call your mother, since it has been a very long time since you last spoke. Mothers have a way of making us feel very ashamed when we don't call them.</p>
 		</div>
 
 
@@ -52,10 +52,10 @@
 
 			<h2>Our world is in hurry</h2>
 
-			<p>Most of the people don't really have time. The lack of time makes you to forget about things even more. The ridiculious situation is that sometimes people don't even have time to make to-do lists.</p>
-			<p>Creating a picture is usually more than enough. Pictures can remind you things which are very hard to express verbally.</p>
+			<p>Most the people don't really time to spare. The lack of time causes us to forget about things even more. The unfortunate situation is that sometimes people don't even have time to make to-do lists.</p>
+			<p>Creating a picture is usually more than enough. Pictures can remind you things which are very difficult to express verbally.</p>
 
-			<p>Not long ago it happened to me that I had to run somewhere and in a hurry I just took a photo of my mother's picture to remind myself to call her.</p>
+			<p>Putting a picture of your mother in a to-do list will do much more to remind you to call her than a note that says "Call Mom".</p>
 
 		</div>
 
@@ -64,12 +64,12 @@
 
 			<h2>A picture is worth 1000 words</h2>
 
-			<p>Phodo allows you to create visual to-do lists, using photos you take, or photos sourced from the cloud.</p>
+			<p>Phodo allows you to create visual to-do lists, using pictures you take, or pictures sourced from the cloud.</p>
 
 			<p>Visual reminders provide better mental association than text-based to-do lists. Studies suggest that our brains can recognize an image in as little as <a href="http://www.dailymail.co.uk/sciencetech/article-2542583/Scientists-record-fastest-time-human-image-takes-just-13-milliseconds.html">13 milliseconds</a>. Compare that with the time it takes to read text-based items on a list, and there's no question which is more efficient.
 			</p>
 
-			<h2>That's why we build PhoDo</h2>
+			<h2>That's why we are building PhoDo</h2>
 
 			<p>Once Phodo launches, you can have your own visual to-do lists for just €29 per year. If you sign up now, you get a full year for FREE!</p>
 
@@ -77,7 +77,7 @@
 
 			<p>If you donate €15, you will get Phodo free for life!</p>
 
-			<p>By using PhoDo, you will never forget to call your mom again. That is the most important thing, isn't it?</p>
+			<p>By using PhoDo, you will never forget to call your mom again. That's the most important thing, isn't it?</p>
 
 		</div>
 		<a href="/register" class="button">Register</a>
