--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,5 +1,6 @@
 html, body { padding:0; margin:0; font-size:14px; font-family: Arial, sans-serif;}
 div, p, ul, li { padding:0; margin:0; }
+p {font-size: large;}
 .clr {height:0px;overflow:hidden; clear:both;}
 
 html { background:#ffffff; color:#000000;}
