--- a/src/views/index.html
+++ b/src/views/index.html
@@ -52,7 +52,7 @@
 
 			<h2>Our world is in hurry</h2>
 
-			<p>Most the people don't really time to spare. The lack of time causes us to forget about things even more. The unfortunate situation is that sometimes people don't even have time to make to-do lists.</p>
+			<p>Most people don't really time to spare. The lack of time causes us to forget about things even more. The unfortunate situation is that sometimes people don't even have time to make to-do lists.</p>
 			<p>Creating a picture is usually more than enough. Pictures can remind you things which are very difficult to express verbally.</p>
 
 			<p>Putting a picture of your mother in a to-do list will do much more to remind you to call her than a note that says "Call Mom".</p>
