mobile optimize and fixes

--- a/src/views/confirmRegistrationFinished.html
+++ b/src/views/confirmRegistrationFinished.html
@@ -34,7 +34,8 @@
 <div id="hull">
 	<div class="site">
 		<p>Congrats, you are registered, yo.</p>
-		<a href="/login" class="button">Login</a>
+		<br>
+		<a href="/login" class="button_big">Login</a>
 
 	</div>
 </div>
