--- a/src/public/style.css
+++ b/src/public/style.css
@@ -66,6 +66,8 @@ img {
 	text-decoration: none;
 	margin-left: 20px;
 	font-weight:bold;
+	display:inline-block;
+	margin-bottom:10px;
 }
 .button:hover {
 	color:#ffffff;
@@ -73,7 +75,23 @@ img {
 
 }
 
+.button_big {
+	display:block;
+	height: auto;
+	background:#7eb82b;
+	border:0px none;
+	padding: 21px;
+	font-size: 31px;
+	color:#ffffff;
+	text-decoration:none;
+	font-weight:normal;
+	border-radius:5px;
+}
+
 #nav {
+	position:relative;
+	overflow:hidden;
+	clear:both;
 	height: 100px;
 	background: #ffffff;
 	border-bottom:1px solid #959595;
@@ -133,6 +151,8 @@ img {
 
 .topic { padding: 70px 0px; }
 .topic p { font-size 14px; line-height: 21px; padding: 21px 0;}
+.topic img { max-width: 280px; width: 100%; max-height: 280px; height: 100%; }
+
 
 .toleft p { text-align: left; }
 .toleft img { float:left; margin: 21px 30px 30px 0; }
@@ -196,10 +216,35 @@ form button {
 		width: 90%;
 	}
 
+	#nav { height: auto; }
 	#nav #actions { float: none; text-align: right; }	
 	#landing #nav #actions { float: none; text-align: center; }
-
+	#nav #actions { padding: 10px 10px 10px 0px;}
 	#nav #actions .button {margin-left: 10px;}
+
+	#head {padding-top:40px;}
+	#logo {margin-bottom: 40px;
+	
+	-ms-zoom: 0.6;
+  -ms-transform-origin: 50% 0%;
+	-moz-transform: scale(0.6);
+	-moz-transform-origin: 50% 0%;
+	-o-transform: scale(0.6);
+	-o-transform-origin: 50% 0%;
+	-webkit-transform: scale(0.6);
+  -webkit-transform-origin: 50% 0%;	
+	}
+
+	h1 { font-size: 31px; line-height: 39px; margin-top:-45px; }
+	h1 span b { color:#000000; }
+
+	#subhead {clear:both; }
+	#subhead h1 {
+		color:#000000;
+		padding: 30px 0px;
+		margin: 0px !important;
+	}
+
 	.topic img { margin:0 auto 30px !important; float:none !important; clear:both;}
 	.topic p { text-align:center; }
 
