--- a/src/views/index.html
+++ b/src/views/index.html
@@ -69,15 +69,18 @@
 			<p>Visual reminders provide better mental association than text-based to-do lists. Studies suggest that our brains can recognize an image in as little as <a href="http://www.dailymail.co.uk/sciencetech/article-2542583/Scientists-record-fastest-time-human-image-takes-just-13-milliseconds.html">13 milliseconds</a>. Compare that with the time it takes to read text-based items on a list, and there's no question which is more efficient.
 			</p>
 
-			<h2>That's why we are building PhoDo</h2>
 
-			<p>Once Phodo launches, you can have your own visual to-do lists for just €29 per year. If you sign up now, you get a full year for FREE!</p>
+			<div id="solution">
+				<h2>That's why we are building PhoDo</h2>
 
-			<p>Share on Facebook, so your friends can also get Phodo for free for the first year.</p>
+				<p>Once Phodo launches, you can have your own visual to-do lists for just €29 per year. If you sign up now, you get a full year for FREE!</p>
 
-			<p>If you donate €15, you will get Phodo free for life!</p>
+				<p>Share on Facebook, so your friends can also get Phodo for free for the first year.</p>
 
-			<p>By using PhoDo, you will never forget to call your mom again. That's the most important thing, isn't it?</p>
+				<p>If you donate €15, you will get Phodo free for life!</p>
+
+				<p>By using PhoDo, you will never forget to call your mom again. That's the most important thing, isn't it?</p>
+			</div>
 
 		</div>
 		<a href="/register" class="button_big">Register</a>
