--- a/src/views/invite.html
+++ b/src/views/invite.html
@@ -35,15 +35,29 @@
 	<div class="site">
 
 		<div>
-			<%= data.link %>
-			<%= data.message %>
-	<form method="post" action="invite">
-		<input type="email" name="email" />
-		<input type="submit" value="Invite" />
-	</form>
+			<!-- <%= data.link %> -->
+			<% if(data.message){ %>
+			<div class="msg">
+
+				<%= data.message %>
+			</div>
+			<% } %>
+
+			<form method="post" action="/invite">
+
+				<div class="form-text">
+					<input type="email" name="email"
+						placeholder="E-mail" />
+				</div>
+				<button type="submit">Invite</button>
+			</form>
+
 		</div>
+
+		<div class="contextual-text">or</div>
+
 		<div id="fb-share">
-			<a target="_blank" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=<%= data.link %>&amp;p[images][0]=http://phodo.co/img/logo.png&amp;p[title]=Phodo%2C%20the%20visual%20to-do%20list&amp;p[summary]=Phodo%20allows%20you%20to%20create%20visual%20to-do%20lists%2C%20using%20photos%20you%20take%2C%20or%20photos%20sourced%20from%20the%20cloud."><img src="http://mindofatul.files.wordpress.com/2013/02/995501-facebook-share.gif"></a>
+			<a target="_blank" id="fbshare_button" href="http://www.facebook.com/sharer/sharer.php?s=100&amp;p[url]=<%= data.link %>&amp;p[images][0]=http://phodo.co/img/logo.png&amp;p[title]=Phodo%2C%20the%20visual%20to-do%20list&amp;p[summary]=Phodo%20allows%20you%20to%20create%20visual%20to-do%20lists%2C%20using%20photos%20you%20take%2C%20or%20photos%20sourced%20from%20the%20cloud.">Share on Facebook</a>
 		</div>
 		<div id="tweet">
 		</div>
