--- a/src/views/index.html
+++ b/src/views/index.html
@@ -31,7 +31,7 @@
 <div id="head">
 	<div class="site">
 		<a id="logo" href="/">PhoDo<span class="fir"></span></a>
-		<h1>The Coolest Photo based ToDo app <span>for <b>Visual Thinkers</b></span></h1>
+		<h1>The Coolest Photo based ToDo app <span>for <b>Visual Thinkers</b>. Us.</span></h1>
 	</div>
 </div>
 
