--- a/src/views/confirmRegistrationFinished.html
+++ b/src/views/confirmRegistrationFinished.html
@@ -27,7 +27,7 @@
 <%- include _headNav.html %>
 <div id="subhead">
 	<div class="site">
-		<h1>Thanks for register!</h1>
+		<h1>Thanks for registering!</h1>
 	</div>
 </div>
 
