tick added and a little clean up

--- a/src/views/confirmRegistrationFinished.html
+++ b/src/views/confirmRegistrationFinished.html
@@ -26,14 +26,14 @@
 <body id="register">
 <%- include _headNav.html %>
 <div id="subhead">
-	<div class="site">
-		<h1>Thanks for registering!</h1>
+	<div class="topic tocenter">
+		<img src="/img/tick.png" alt="" width="280" height="280" style="border-style: none"/>
+		<h1>Done! Thanks for registering!</h1>
 	</div>
 </div>
 
 <div id="hull">
 	<div class="site">
-		<p>Congrats, you are registered, yo.</p>
 		<br>
 		<a href="/login" class="button_big">Login</a>
 
