--- a/src/views/loggedIn.html
+++ b/src/views/loggedIn.html
@@ -23,22 +23,91 @@
 <title>PhoDo | Registration</title>
 <link rel="stylesheet" type="text/css" media="screen" href="/fonts/fonts.css" />
 <link rel="stylesheet" type="text/css" media="screen" href="/style.css" />
+
+<script src="/lib/jquery-2.1.3.min.js"></script>
+<script src="/lib/jquery-ui-1.11.2/jquery-ui.min.js"></script>
+<script src="/lib/jquery.ui.touch-punch.min.js"></script>
+<script src="/lib/knockout-3.2.0.js"></script>
+<script src="/lib/knockout-sortable.min.js"></script>
+<script>
+	$(document).ready(function() {
+		function todoList() {
+			var todos = null;
+			if (localStorage && localStorage.todos) {
+				todos = JSON.parse(localStorage.todos);
+
+				console.log("Read from storage.");
+			} else {
+				todos = [
+					{
+						name: "yo"
+					},
+					{
+						name: "yo2"
+					},
+					{
+						name: "yo3"
+					}
+				];
+
+				console.log("Read from storage.");
+			}
+
+			var items = ko.observableArray(todos);
+
+			function remove(item) {
+				items.remove(item);
+			}
+
+			function add() {
+				items.push({
+					name: "New element"
+				});
+			}
+
+
+
+			setInterval(function() {
+				localStorage.todos = JSON.stringify(items());
+			}, 100);
+
+			return {
+				items: items,
+
+				remove: remove,
+				add: add
+			};
+		}
+
+		ko.applyBindings(todoList());
+	});
+</script>
+
+
+</head>
 <body id="register">
 <%- include _headNav.html %>
 <div id="subhead">
 	<div class="site">
-		<h1>Logged in page</h1>
+		<button data-bind="click: add">New</button>
 	</div>
 </div>
 
 <div id="hull">
 	<div class="site">
-		<p>Logged in!!!</p>
-		<p>Once Phodo launches, you can have your own visual to-do lists for just €29 per year. If you sign up now, you get a full year for FREE!</p>
-
-		<p>Share on Facebook, so your friends can also get Phodo for free for the first year.</p>
-
-		<p>If you donate €15, you will get Phodo free for life!</p>
+		<div data-bind="sortable: {data: items, options: {handle: '.dragHandle'}}">
+			<div style="position: relative; height: 150px; background: white; border: 1px solid #ddd;">
+				<div class="dragHandle" style="width: 50px; position: absolute; left 0; top: 0;">
+					<img src="/img/rearrange.png" widh="50" height="50"/>
+				</div>
+				<div style="position: absolute; left: 70px; top: 0;">
+					<img src="/img/phodo6080.png" />
+					<div data-bind="text: name"></div>
+					<button data-bind="click: $parent.remove">Edit</button>
+					<button data-bind="click: $parent.remove">Remove</button>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
