--- a/src/views/confirmRegistrationFinished.html
+++ b/src/views/confirmRegistrationFinished.html
@@ -26,7 +26,7 @@
 <body id="register">
 <%- include _headNav.html %>
 <div id="subhead">
-	<div class="topic tocenter">
+	<div class="site tocenter">
 		<img src="/img/tick.png" alt="" width="280" height="280" style="border-style: none"/>
 		<h1>Done! Thanks for registering!</h1>
 	</div>
