--- a/src/views/confirmRegistrationEmailSent.html
+++ b/src/views/confirmRegistrationEmailSent.html
@@ -26,15 +26,14 @@
 <body id="register">
 <%- include _headNav.html %>
 <div id="subhead">
-	<div class="site">
-		<h1>Confirm your registration</h1>
+	<div class="site tocenter">
+		<img src="/img/tick.png" alt="" width="280" height="280" style="border-style: none"/>
+		<h1>One more step and you are done</h1>
 	</div>
 </div>
-
 <div id="hull">
 	<div class="site">
 		<p>Please check your email, and confirm your registration.</p>
-
 	</div>
 </div>
 
