--- a/src/views/index.html
+++ b/src/views/index.html
@@ -31,7 +31,7 @@
 <div id="head">
 	<div class="site">
 		<a id="logo" href="/">PhoDo<span class="fir"></span></a>
-		<h1>The Coolest <b>Photo based ToDo app</b> <span>for Visual Thinkers. Us.</span></h1>
+		<h1>The coolest <b>Photo based ToDo app</b> <span>for Visual Thinkers. Us.</span></h1>
 	</div>
 </div>
 
