--- a/src/views/confirmRegistrationEmailSent.html
+++ b/src/views/confirmRegistrationEmailSent.html
@@ -28,7 +28,8 @@
 <div id="subhead">
 	<div class="site tocenter">
 		<img src="/img/tick.png" alt="" width="280" height="280" style="border-style: none"/>
-		<h1>One more step and you are done. <span>Please check your email, and confirm your registration.</span></h1>
+		<h1>One more step and you are done.</h1>
+		<p>Please check your email, and confirm your registration.</p>
 	</div>
 </div>
 <div id="hull">
