--- a/src/views/confirmRegistrationEmailSent.html
+++ b/src/views/confirmRegistrationEmailSent.html
@@ -27,9 +27,8 @@
 <%- include _headNav.html %>
 <div id="subhead">
 	<div class="site tocenter">
-		<img src="/img/tick.png" alt="" width="280" height="280" style="border-style: none"/>
-		<h1>One more step and you are done.</h1>
-		<p>Please check your email, and confirm your registration.</p>
+		<img src="/img/tick_yellow.png" alt="" width="280" height="280" style="border-style: none"/>
+		<h1>Please check your email to confirm your registration.</h1>
 	</div>
 </div>
 <div id="hull">
